visibility issues amended to hamburger menu

--- a/web/themes/custom/cj_material/css/styles.css
+++ b/web/themes/custom/cj_material/css/styles.css
@@ -2242,10 +2242,6 @@ navbar overlaying header-content (for sliders)
 }
 
 /* tabs */
-nav.tabs {
-  max-width: 1200px;
-  margin: 0 auto;
-}
 .tabs ul, ul.tabs {
   list-style: none;
   display: flex;
@@ -4659,6 +4655,7 @@ iframe {
 #drawer nav ul.menu {
   display: flex;
   flex-direction: column-reverse;
+  visibility: visible;
 }
 
 @media (max-width: 1256px) {
@@ -5104,6 +5101,11 @@ strong {
 }
 .user-self-edit-candidate-form #edit-individual-profile-places .form-item-individual-profile-places-actions-bundle {
   display: block;
+}
+
+nav.tabs {
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .tabs ul li a {
